--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ email: jorgen.paulson@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A blog where I post about some project I do. Mostly Linux (and more specifically Ubuntu) stuff.
 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "https://jorgen-p.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  Jorgen-P
 
